--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest": "^27.2.1",
     "jest-image-snapshot": "^4.5.1",
     "jest-playwright-preset": "^1.7.0",
+    "nyc": "^15.1.0",
     "playwright": "^1.15.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
